// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Integral Input Forms 1`] = `
Array [
  0.7,
  0,
  0.13454,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Input Forms 2`] = `
Array [
  0.7,
  0,
  0.14,
  0,
  0.7,
  -0.1036,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Input Forms 3`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0.0721,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Input Forms 4`] = `
Array [
  0.10109,
  0,
  0.03346,
  0,
  0.2121,
  -0.0756,
  0,
  0,
  1,
]
`;
